# voiceType

./: .gitignore  LICENSE  README.md  ai_consultant.py  ai_helpers.sh  install.sh
tempest-type/: Cargo.toml  test.command
tempest-type/src/: audio.rs  clipboard.rs  config.rs  hotkey.rs  keyboard.rs  main.rs  notification.rs  ollama.rs  transcription.rs
voice_type_rs/: Cargo.toml
voice_type_rs/src/: audio.rs  config.rs  hotkey.rs  main.rs  ollama.rs  transcription.rs
