[package]
name = "tempest-type"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock"] }
cpal = "0.17.3"
arboard = "3.4.1"
notify-rust = "4.11.5"
rodio = "0.22.2"
confy = "0.6.1"
toml = "0.8.19"
dirs = "6.0.0"
enigo = "0.6.1"
image = "0.25.5"
ollama-rs = "0.3.4"
rdev = "0.5.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = "0.34.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tray-icon = "0.21.3"
whisper-rs = "0.16.0"
